# catalyst-wellbeing2

./: .env.capacitor.example  .env.example  .env.fcm.example  .env.governance.example  .env.local.example  .env.local.template  .env.production  .env.production.example  .env.seo.example  .env.subscription-sync.example  .eslintignore  .eslintrc.json  .firebaserc  .gitignore  .netlifyignore  AFFILIATE_REFERRAL_IMPLEMENTATION.md  AFFILIATE_SETUP_GUIDE.md  ANDROID_APK_GUIDE.md  API_EXTENDED_OPTIMIZATION_REPORT.md  API_FIX_ANALYSIS_AND_PLAN.md  API_OPTIMIZATION_REPORT.md  API_PERFORMANCE_FIXES_NOV_2024.md  ASSESSMENT_UPDATES_SUMMARY.md  AUDIT_COMPLETE_SUMMARY.md  AUDIT_FIXES_COMPLETE_REPORT.md  AUTH_ISSUES_ANALYSIS.md  BACKEND_SYSTEMS_INTEGRATION.md  BUG_ANALYSIS_EXECUTIVE_SUMMARY.md  CACHING_OPTIMIZATION_SUMMARY.md  CATALYST_FEATURES_BREAKDOWN.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_BUG_ANALYSIS_REPORT.md  COMPREHENSIVE_BUG_AUDIT_REPORT.md  COMPREHENSIVE_OPTIMIZATION_ANALYSIS.md  COMPREHENSIVE_OPTIMIZATION_REPORT_INDEX.md  COMPREHENSIVE_OPTIMIZATION_REPORT_PART1.md  CRITICAL_BUGS_FIXED.md  CRITICAL_BUGS_QUICK_FIX_GUIDE.md  DAILY_TOPICS_TROUBLESHOOTING.md  DASHBOARD_UPGRADE_GUIDE.md  (+131 more)
__tests__/: setup.d.ts
database/: AEGISX_COMPLETE_IMPLEMENTATION.md  AEGISX_SETTINGS_GUIDE.md  AEGISX_SETUP_GUIDE.md  AEGISX_UI_GUIDE.md  AEGISX_UX_IMPROVEMENTS.md  ANALYZE_AND_FIX_RLS.sql  ASSESSMENTS_SETUP_GUIDE.md  BULK_FIX_RLS.sql  CHECK_ALL_POLICY_COLUMNS.sql  CHECK_CURRENT_DUPLICATES.sql  CHECK_CURRENT_STATE.sql  CHECK_LAYOUT_PATTERN.sql  CHECK_SEATING_CHART_ACTIVE.sql  CHECK_SEAT_PATTERN.sql  CHECK_STUDENT_ASSIGNMENTS.sql  COMPLETE_RLS_FIX.sql  COMPLETE_SEATING_CHECK.sql  CONSOLIDATE_DUPLICATE_POLICIES.sql  DIAGNOSE_RLS.sql  (+233 more)
developer/sdk/python/: README.md  pyproject.toml
developer/sdk/python/catalystwells/: __init__.py  client.py
(+2049 files in other folders)
